--- a/package.json
+++ b/package.json
@@ -4,13 +4,37 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
+    "lint:ci": "eslint \"**/*.{ts,tsx,js,jsx}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,json}\"",
+    "format:ci": "prettier --list-different \"**/*.{ts,tsx,js,jsx}\"",
+    "postinstall": "husky install"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.10.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "turbo": "^2.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
+  },
+  "lint=staged": {
+    "*.{ts,tsx,js,jsx,cjs,mjs,json}": [
+      "pnpm lint",
+      "pnpm format"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
