--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:ci": "eslint \"**/*.{ts,tsx,js,jsx}\"",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,json}\"",
     "format:ci": "prettier --list-different \"**/*.{ts,tsx,js,jsx}\"",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "commit": "git-cz"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -25,7 +26,7 @@
     "turbo": "^2.1.3",
     "typescript": "^5.6.2"
   },
-  "lint=staged": {
+  "lint-staged": {
     "*.{ts,tsx,js,jsx,cjs,mjs,json}": [
       "pnpm lint",
       "pnpm format"
